<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BoussoleActivity" >
	
	<!-- Altitude   -->
 	
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:text="@string/Altitude" />
    
    
    <EditText
        android:id="@+id/etAltitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView1"
        android:inputType="numberDecimal|numberSigned"
        android:text="@string/stAltitude" />

   	<!-- Chrono   -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/etChrono"
        android:layout_alignParentLeft="true"
        android:text="@string/Chrono" />
    
    <EditText
        android:id="@+id/etChrono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/etAltitude"
        android:layout_toRightOf="@+id/textView2"
        android:inputType="numberDecimal|numberSigned"
        android:text="@string/stChrono" />

    <!-- Cap   -->
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/etCap"
        android:layout_alignParentLeft="true"
        android:text="@string/Cap" />

    <EditText
        android:id="@+id/etCap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/etChrono"
        android:layout_toRightOf="@+id/textView3"
        android:inputType="numberDecimal"
        android:text="@string/stCap" />
    
    <!-- EcartLateral   -->
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/etEcartLateral"
        android:layout_alignParentLeft="true"
        android:text="@string/EcartLateral" />

    <EditText
        android:id="@+id/etEcartLateral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/etCap"
        android:layout_toRightOf="@+id/textView4"
        android:inputType="numberDecimal|numberSigned"
        android:text="@string/stEcartLateral" />
    
    <!-- Route Cap   -->
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/etRoute"
        android:layout_alignParentLeft="true"
        android:text="@string/Route" />

    <EditText
        android:id="@+id/etRoute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/etEcartLateral"
        android:layout_toRightOf="@+id/textView5"
        android:inputType="numberDecimal"
        android:text="@string/stRoute" />
    
    <!-- Vue boussole   -->
   	<fr.lusson.bousole.vue.BousoleView
        android:id="@+id/BoussoleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true" />
    
</RelativeLayout>